--- a/css/style.css
+++ b/css/style.css
@@ -1,926 +1,3 @@
-*{
-    margin: 0;
-    text-decoration: none;
-    list-style: none;
-    padding: 0;
-}
-.main_nav{
-    align-items: flex-start;
-}
-.navbar_mine{
-    border-bottom: 0.5px solid;
-    width: 100%;
-    border-left: 0.5px solid;
-}
-.nav_item{
-    border: solid 0.5px black;
-    display: flex;
-    width: 100%;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-}
-.navbar_mine_b{
-    display: grid;
-    grid-template-columns: 1fr 1fr 1fr 1fr;
-    grid-template-rows: 1fr;
-}
-.nav_a{
-    font-family: 'Inter', sans-serif;
-    font-weight: 400;
-    text-transform: uppercase;
-    font-size: 14px;
-    color: rgb(0, 0, 0);
-}
-footer{
-    border-top: 0.5px solid black;
-    margin-bottom: 0;
-    padding: 20px;
-}
-h1{
-    font-family: 'Inter', sans-serif;
-    font-weight: 400;
-    text-transform: uppercase;
-    font-size: 4.5rem;
-    text-align: center;
-    padding: 0rem 20rem 0rem 20rem;
-    display: flex;
-}
-h2{
-    font-family: 'Inter', sans-serif;
-    font-weight: 300;
-    text-transform: uppercase;
-    font-size: 2.2rem;
-}
-h3{
-    font-family: 'Inter', sans-serif;
-    font-weight: 400;
-    text-transform: uppercase;
-    font-size: 4rem;
-}
-h4{
-    font-family: 'Inter', sans-serif;
-    font-weight: 500;
-    text-transform: uppercase;
-    font-size: 1.4rem;
-}
-h5{
-    font-family: 'Inter', sans-serif;
-    font-weight: 300;
-    text-transform: uppercase;
-    font-size: 2.3rem;
-    letter-spacing: 8px;
-    grid-area: phrase;
-}
-p{
-    font-family: 'Inter', sans-serif;
-    font-weight: 300;
-    font-size: 1.1rem;
-}
 
-/*FIN PRINCIPALES*/
-.div_portfolio{
-    display: flex;
-    padding: 20px;
-}
-.img_portfolio{
-    object-fit: cover;
-    display: flex;
-}
-.img_portfolio_b{
-    object-fit: cover;
-    display: flex;
-}
-.bg_e{
-    background: rgb(63,94,251);
-    background: linear-gradient(171deg, rgba(63,94,251,1) 0%, rgba(252,70,107,1) 100%);
-    display: flex;
-    object-fit: cover;
-    border: 0.5px solid black;
-    grid-area: bge;
-}
-.bg_d{
-    background: rgb(34,193,195);
-    background: linear-gradient(16deg, rgba(34,193,195,1) 0%, rgba(253,187,45,1) 100%);
-    display: flex;
-    object-fit: cover;
-    border: 0.5px solid black;
-}
-.bg_services{
-    background: rgb(34,193,195);
-    background: linear-gradient(16deg, rgba(34,193,195,1) 0%, rgba(253,187,45,1) 100%);
-    display: flex;
-    object-fit: cover;
-    grid-area: bg;
-    border-left: solid 1px black;
-}
-.img_border{
-    margin: 20px;
-    object-fit: cover;
-}
-.container_img{
-    display: flex;
-}
-.container_img_b{
-    display: flex;
-    border-top: 0.5px solid;
-}
-.img_home_services{
-    object-fit: cover;
-    display: flex;
-    border: 0.5px solid black;
-}
-.img_carrusel{
-    border: 1px solid black;
-}
-.hidden{
-    display: none;
-}
-.subtitle_a{
-    padding: 25px 0;
-}
-.subtitle_b{
-    text-align: center;
-    padding: 50px 0;
-    border-top: 0.5px solid black;
-}
-.subtitle_c{
-    text-align: center;
-    padding: 50px 0;
-    border: 0.5px solid black;
-}
-.text_box_a{
-    margin: 40px 40px 40px 80px;
-}
-.text_box_b{
-    margin: 60px 80px;
-    padding: 25px 0;
-}
-.logo{
-    display: inline;
-    height: 150px;
-    width: 150px;
-}
-#move_bar{
-    font-family: 'Inter', sans-serif;
-    font-weight: 400;
-    text-transform: uppercase;
-    font-weight: 1.3rem;
-    text-align: center;
-    border: 0.5px solid black;
-    padding: 10px 0 5px 0;
-}
-section marquee ul li{
-    display: inline;
-    padding: 8px;
-    font-family: 'Inter', sans-serif;
-    font-weight: 400;
-    text-transform: uppercase;
-}
-section marquee ul{
-    display: flex;
-    flex-direction: row;
-    margin: 0%;
-    padding: 0%;
-    width: 100%;
-}
-.btn_mine{
-    border: 1px solid black;
-    background-color: rgb(0, 0, 0);
-    font-family: 'Inter', sans-serif;
-    font-weight: 400;
-    text-transform: uppercase;
-    color: white;
-    padding: 20px 40px;
-    text-decoration: none;
-    text-align: center;
-}
-.button_b{
-    border: 1px solid black;
-    background-color: rgb(0, 0, 0);
-    font-family: 'Inter', sans-serif;
-    font-weight: 400;
-    text-transform: uppercase;
-    color: white;
-    padding: 20px 40px;
-    text-decoration: none;
-}
-.img{
-    border-left: 1px solid black;
-    object-fit: cover;
-    display: flex;
-}
-.img_b{
-    border: 0.5px solid black;
-}
-.text_img_box{
-    position: relative;
-    text-align: center;
-    display: flex;
-    flex-shrink: 0;
-}
-.text_img{
-    font-family: 'Inter', sans-serif;
-    font-weight: 400;
-    color: white;
-    position: absolute;
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%, -50%);
-}
-.div_half{
-    border: 0.5px solid black;
-}
-.services_subtitle{
-    text-align: center;
-    padding-top: 40px;
-}
-.services_text{
-    padding: 30px 50px;
-    text-align: center;
-}
-.socialmedia_icons{
-    width: 40px;
-}
-footer div ul li{
-    display: inline-block;
-    padding: 0 20px 0 20px;
-}
-.arrowup{
-    width: 60px;
-    grid-area: arrow;
-}
-.button_div{
-    margin-top: 3rem;
-    margin-bottom: 3rem;
-}
-.button_div_portfolio{
-    position: absolute;
-	bottom: 10px;
-	left: 200px;
-	width: 100px;
-}
-.button_div_b{
-    display: flex;
-    flex-direction: row;
-    justify-content: center;
-    padding: 3rem 0;
-    border: 0.5px solid black;
-}
-.button_div_c{
-    margin-top: 3rem;
-    margin-bottom: 3rem;
-}
-.about_icon{
-    max-width: 2rem;
-}
-.progress_bar{
-    display: flex;
-    flex-direction: row;
-    justify-content: space-evenly;
-}
-.progress_bar_b{
-    display: flex;
-    flex-direction: row;
-    justify-content: center;
-    gap: 6%;
-}
-.progress_item{
-    width: 25%;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-}
-.socialmedia{
-    grid-area: socialmedia;
-}
-.img_container{
-    display: flex;
-    flex-direction: row;
-    gap: 50px;
-    margin: 50px 0;
-    align-items: center;
-    justify-content: center
-}
-.icons_aboutme{
-    grid-area: icon;
-    border: 0.5px solid black;
-    padding: 30px;
-    display: flex;
-    justify-content: space-evenly;
-    gap: 8%;
-}
-.about_text_a{
-    grid-area: text;
-    border: 0.5px solid black;
-    padding: 30px;
-    display: flex;
-    align-items: center;
-}
-.about_text_b{
-    grid-area: textb;
-    border: 0.5px solid black;
-    padding: 30px;
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-}
-.edu_a{
-    grid-area: edua;
-    border: 0.5px solid black;
-    padding: 30px;
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-}
-.edu_b{
-    grid-area: edub;
-    border: 0.5px solid black;
-    padding: 30px;
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-}
-.img_c{
-    border: 0.5px solid black;
-}
-.job_c{
-    border: 0.5px solid black;
-    padding: 30px;
-    grid-area: jobc;
-}
-.job_d{
-    border: 0.5px solid black;
-    padding: 30px;
-    grid-area: jobd;
-}
-.experience{
-    border: 0.5px solid black;
-    padding: 30px;
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: flex-end;
-    grid-area: exp;
-}
-.list_area{
-    border: 0.5px solid black;
-    padding: 30px;
-    grid-area: list;
-    display: flex;
-}
-.list{
-    display: flex;
-    flex-direction: column;
-    justify-content: space-evenly;
-    gap: 5%;
-}
-.list_item{
-    display: flex;
-    flex-direction: row;
-    gap: 5%;
-}
-.question{
-    border: 0.5px solid black;
-    padding: 30px;
-    grid-area: question;
-    display: flex;
-    flex-direction: column;
-    align-items: flex-start;
-    justify-content: center;
-}
-.img_d{
-    grid-area: imgd;
-    border: 0.5px solid black;
-    padding: 30px;
-}
-.job_b{
-    grid-area: jobb;
-    border: 0.5px solid black;
-    padding: 30px;
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-}
-.job_c{
-    grid-area: jobc;
-    border: 0.5px solid black;
-    padding: 30px;
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-}
-.skills{
-    grid-area: skills;
-    border: 0.5px solid black;
-    padding: 30px;
-    display: flex;
-    flex-direction: column;
-    justify-content: space-evenly;
-    flex-wrap: wrap;
-}
-.behance{
-    width: 30%;
-}
-.cta_portfolio{
-    display: flex;
-    flex-direction: column;
-    padding-right: 10%;
-}
-/* FIN DE ESTILOS GENERALES */
-main{
-    border-bottom: 0.5px solid black;
-}
-.main_index{
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-}
-.grid_a{
-    display: grid;
-    grid-template-columns: 2fr 3fr;
-    grid-template-rows: 100%;
-    border-top: 1px solid black;
-}
-.grid_b{
-    display: grid;
-    grid-template-columns: 3fr 2fr;
-    grid-template-rows: 100%;
-    border: 0.5px solid black;
-}
-.flex_a{
-    display: flex;
-    justify-content: space-between;
-    border: 0.5px solid black;
-    width: 100%;
-}
-.grid_c{
-    display: grid;
-    grid-template-columns: 1fr 1fr;
-    grid-template-rows: 2.5fr 1fr;
-    justify-self: center;
-    align-self: center;
-}
-.footer_grid{
-    display: grid;
-    grid-template-columns: 3.3fr 2fr 0.5fr;
-    grid-template-rows: 1fr;
-    justify-items: center;
-    align-items: end;
-}
-/* ABOUT ME */
-.main_about{
-    display: grid;
-    grid-template-columns: 2fr 3fr;
-    grid-template-rows: 100%;
-    border: 0.5px solid black;
-    border-top: 0px solid;
-}
-.grid_d{
-    display: grid;
-    grid-template-columns: 1fr 2fr 2fr;
-    grid-template-rows: 1fr 2fr;
-    grid-template-areas: 
-    "icon text text"
-    "textb edua edub"
-    ;
-}
-.grid_e{
-    display: grid;
-    grid-template-columns: 1.5fr 1.8fr 1.8fr 1fr;
-    grid-template-rows: 1fr;
-    grid-template-areas:
-    "bge jobc jobd exp"
-    ;
-}
-.grid_f{
-    display: grid;
-    grid-template-columns: 1fr 1fr 1.3fr 1.3fr;
-    grid-template-rows: 1fr 0.2fr 1fr;
-    grid-template-areas:
-    "list imgd jobb jobc"
-    "list skills skills skills"
-    "question skills skills skills"
-    ;
-}
-/* PORTFOLIO */
-.main_portfolio{
-    grid-area: main;
-    border: 0.5px solid black;
-    border-top: 0px;
-}
-.sec_a_portfolio{
-    grid-area: seca;
-    border: 0.5px solid black;
-    display: flex;
-}
-.sec_b_portfolio{
-    grid-area: secb;
-    border: 0.5px solid black;
-    display: flex;
-}
-.sec_c_portfolio{
-    grid-area: secc;
-    border: 0.5px solid black;
-    display: flex;
-}
-.sec_d_portfolio{
-    grid-area: secd;
-    border: 0.5px solid black;
-    display: flex;
-}
-.sec_e_portfolio{
-    grid-area: sece;
-    border: 0.5px solid black;
-    display: flex;
-}
-.sec_f_portfolio{
-    grid-area: secf;
-    border: 0.5px solid black;
-    display: flex;
-}
-.sec_g_portfolio{
-    grid-area: secg;
-    border: 0.5px solid black;
-    display: flex;
-}
-.sec_h_portfolio{
-    grid-area: sech;
-    border: 0.5px solid black;
-    display: flex;
-    flex-direction: row;
-    padding: 30px;
-    align-items: center;
-}
-.grid_portfolio{
-    display: grid;
-    grid-template-columns: 1fr 2fr 1fr;
-    grid-template-rows: 0.3fr 0.3fr 0.4fr 0.05fr 0.1fr 0.3fr 0.1fr;
-    grid-template-areas:
-    "main main seca"
-    "secb secc seca"
-    "secb secc secd"
-    "secb secf secd"
-    "sece secf secd"
-    "sece secf secg"
-    "sece sech secg"
-    ;
-}
-/* SERVICES */
-.text_box_c{
-    margin: 60px 80px;
-    padding: 25px 0;
-    grid-area: title;
-    display: flex;
-    flex-direction: column;
-}
-.grid_services{
-    display: grid;
-    grid-template-columns: 1.5fr 1.4fr;
-    grid-template-rows: 0.5fr 1fr;
-    grid-template-areas: 
-    "title bg"
-    "text bg"
-    ;
-}
-.text_services{
-    border-top: 1px solid black;
-    display: flex;
-    flex-direction: column;
-    padding: 60px;
-    align-items: flex-start;
-    grid-area: text;
-}
-.services_textbox{
-    padding: 30px;
-    margin: 0px 250px 60px 250px;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    border: solid 1px black;
-    text-align: center;
-    flex-wrap: wrap;
-}
-.design_services_title{
-    padding: 40px;
-}
-.design_services_text{
-    padding: 40px;
-}
-.design_services_button{
-    border: 1px solid black;
-    background-color: rgb(0, 0, 0);
-    font-family: 'Inter', sans-serif;
-    font-weight: 400;
-    text-transform: uppercase;
-    color: white;
-    padding: 20px 40px;
-    margin: 40px;
-    text-decoration: none;
-}
-.services_flex{
-    display: flex;
-    border: solid 0.5px black;
-}
-.services_items{
-    display: flex;
-    flex-direction: column;
-    padding: 60px;
-    border: 0.5px solid black;
-    align-items: flex-start;
-}
-/* CONTACT */
-.contact_info{
-    display: flex;
-    flex-direction: column;
-    margin: 60px 80px;
-    grid-area: info;
-}
-.contact_grid{
-    display: grid;
-    grid-template-columns: 1fr 1fr;
-    grid-template-rows: 2fr;
-    grid-template-areas:
-    "text form"
-    "bgc form"
-    ;
-}
-.contact_form{
-    border-left: 1px solid black;
-    padding: 60px 80px;
-    display: flex;
-    flex-direction: column;
-    align-items: flex-start;
-    justify-content: space-between;
-    grid-area: form;
-}
-.bg_contact{
-    background: rgb(34,193,195);
-    background: linear-gradient(16deg, rgba(34,193,195,1) 0%, rgba(253,187,45,1) 100%);
-    display: flex;
-    object-fit: cover;
-    grid-area: bgc;
-    border-left: solid 1px black;
-    border-top: solid 1px black;
-}
-/* PSEUDOCLASES */
-.navbar_mine :hover {
-    background-color: black;
-    color: white;
-}
-.button_div :hover{
-    border: 1px solid rgb(0, 0, 0);
-    background: rgb(255,250,155);
-    background: radial-gradient(circle, rgba(255,250,155,1) 0%, rgba(79,178,255,1) 100%);
-    color: black;
-}
-.button_div_c :hover{
-    border: 1px solid rgb(0, 0, 0);
-    background: rgb(243,155,255);
-    background: radial-gradient(circle, rgba(243,155,255,1) 0%, rgba(79,255,225,1) 100%);
-    color: black;
-}
-.button_div_b :hover{
-    border: 1px solid rgb(0, 0, 0);
-    background: rgb(190,255,79);
-    background: radial-gradient(circle, rgba(190,255,79,1) 0%, rgba(255,155,254,1) 100%);
-    color: black;
-}
-.btn_mine :hover{
-    border: 1px solid rgb(0, 0, 0);
-    background: rgb(190,255,79);
-    background: radial-gradient(circle, rgba(190,255,79,1) 0%, rgba(255,155,254,1) 100%);
-    color: black;
-}
-/*BS TOGGLER*/
-.navbar-toggler-mine{
-    border: 1px solid black;
-    border-radius: 0px;
-    margin: 5%;
-    padding: 20px;
-}
-.carousel_bg{
-    display: none;
-}
-.footer_display{
-    display: none;
-}
-.footer_display_complete{
-    display: block;
-}
-.hidden_mobile{
-    display: block;
-}
-/* MOBILE INDEX */
 
-@media (max-width: 576px){
-    h1{
-        font-size: 2rem;
-        padding: 2rem 5rem;
-        border: 1px solid;
-        margin: 0;
-    }
-    .carousel_bg{
-        background-color: black;
-        display: block;
-    }
-    .carousel_mine{
-        opacity: 0.7;
-    }
-    .img_container{
-        display: none;
-    }
-    .grid_a{
-        display: flex;
-        flex-direction: column;
-    }
-    .text_box_a{
-        margin: 20px 45px;
-    }
-    .container_img{
-        display: flex;
-        border: 1px solid black;
-    }
-    h2{
-        font-size: 1.5rem;
-    }
-    h3{
-        font-size: 2rem;
-    }
-    .grid_b{
-        display: flex;
-        flex-direction: column;
-    }
-    .grid_c{
-        grid-template-rows: 1fr 1fr;
-        grid-template-columns: 1fr 1fr;
-    }
-    h4{
-        font-size: 1.2rem;
-    }
-    .services_text{
-        padding: 10px;
-    }
-    p{
-        font-size: 0.9rem;
-    }
-    h5{
-        font-size: 0.8rem;
-    }
-    .footer_display{
-        display: block;
-    }
-    .footer_display_complete{
-        display: none;
-    }
-    .socialmedia_icons{
-        width: 15px;
-    }
-    .display_socialmedia{
-        display: flex;
-    }
-    footer div ul li{
-        padding: 0 5px;
-    }
-    .hidden_mobile{
-        display: none;
-    }
-    .arrowup{
-        width: 40px;
-    }
-    .footer_grid{
-        grid-template-columns: 2fr 2fr 1fr;
-    }
-
-/* MOBILE ABOUT ME */
-
-    .grid_d{
-        grid-template-columns: 0.3fr 0.5fr 0.5fr 0.5fr;
-        grid-template-rows: 0.3fr 0.3fr 0.3fr;
-        grid-template-areas:
-        "icon icon text text"
-        "textb textb edua edua"
-        "edub edub edub edub"
-        ;
-    }
-    .icons_aboutme{
-        padding: 10px;
-    }
-    .about_icon{
-        max-width: 0.8rem;
-    }
-    .about_text_a{
-        padding: 100 20px;
-        align-items: center;
-        text-align: center;
-    }
-    .grid_e{
-        grid-template-columns: 1.5fr 1.8fr 1.8fr 1fr;
-        grid-template-rows: 0.3fr 0.3fr 0.3fr;
-        grid-template-areas:
-        "bge bge exp exp"
-        "jobc jobc jobc jobc"
-        "jobd jobd jobd jobd"
-        ;
-    }
-    .grid_f{
-        display: flex;
-        flex-direction: column;
-    }
-    .bg_d{
-        display: none;
-    }
-    .list{
-        flex-direction: row;
-        padding: 0;
-        margin: 0;
-    }
-    .list_area{
-        justify-content: center;
-    }
-    .question{
-        display: flex;
-        flex-direction: row;
-        justify-content: space-around;
-    }
-    .progress_bar{
-        padding: 0;
-    }
-    .progress_bar_b{
-        padding: 0;
-    }
-
-/* MOBILE ABOUT ME */
-    .grid_portfolio{
-        grid-template-columns: 1fr 0.5fr 1fr;
-        grid-template-rows: 0.5fr 0.2fr 0.8fr 1fr 0.2fr;
-        grid-template-areas:
-        "main main main"
-        "seca secb secb"
-        "secd secb secb"
-        "secd secc secc"
-        "secg secg sece"
-        "sech sech sech"
-        ;
-    }
-    .text_box_b{
-        padding: 0;
-    }
-    .sec_f_portfolio{
-        display: none;
-    }
-/* SERVICES */
-    .grid_services{
-        display: grid;
-        grid-template-columns: 1fr;
-        grid-template-areas: 
-        "title"
-        "bg"
-        "text"
-        ;
-    }
-    .text_box_c{
-        margin-top: 20px;
-        margin-bottom: 10px;
-    }
-    .bg_services{
-        border: 1px solid;
-        border-bottom: 0;
-    }
-    .services_textbox{
-        margin: 0px 60px 60px 60px;
-    }
-    .design_services_title{
-        padding: 10px;
-    }
-    .design_services_text{
-        padding: 10px;
-    }
-    .services_items{
-        padding: 40px;
-    }
-/* CONTACT */
-    .contact_grid{
-        grid-template-columns: 1fr;
-        grid-template-rows: 0.8fr 1fr;
-        grid-template-areas:
-        "info"
-        "bgc"
-        "form"
-        ;
-    }
-    .bg_contact{
-        border-bottom: solid 1px black;
-    }
-}
-
-/* EXTRAS
-
-.contact_grid{
-    display: grid;
-    grid-template-columns: 1fr 1fr;
-    grid-template-rows: 2fr;
-}
-
-EXTRAS*/
+/*# sourceMappingURL=style.css.map */
