--- a/scss/base/_base.scss
+++ b/scss/base/_base.scss
@@ -1,3 +1,10 @@
+*{
+    margin: 0;
+    text-decoration: none;
+    list-style: none;
+    padding: 0;
+}
+
 h1{
     font-family: 'Inter', sans-serif;
     font-weight: 400;
@@ -37,4 +44,8 @@ p{
     font-family: 'Inter', sans-serif;
     font-weight: 300;
     font-size: 1.1rem;
+}
+
+.hidden{
+    display: none;
 }
