--- a/css/style.css
+++ b/css/style.css
@@ -1,3 +1,10 @@
+* {
+  margin: 0;
+  text-decoration: none;
+  list-style: none;
+  padding: 0;
+}
+
 h1 {
   font-family: "Inter", sans-serif;
   font-weight: 400;
@@ -5,7 +12,6 @@ h1 {
   font-size: 4.5rem;
   text-align: center;
   padding: 0rem 20rem 0rem 20rem;
-  display: flex;
 }
 
 h2 {
@@ -42,6 +48,171 @@ p {
   font-family: "Inter", sans-serif;
   font-weight: 300;
   font-size: 1.1rem;
+}
+
+.hidden {
+  display: none;
+}
+
+.show {
+  display: block;
+}
+
+#move_bar {
+  font-weight: 1.3rem;
+  border: black, 0.5px solid;
+  padding: 10px 0 5px 0;
+}
+#move_bar marquee ul {
+  display: flex;
+  flex-direction: row;
+  margin: 0%;
+  padding: 0%;
+  width: 100%;
+}
+#move_bar marquee ul li {
+  display: inline;
+  padding: 8px;
+}
+
+.button_div {
+  margin-top: 3rem;
+  margin-bottom: 3rem;
+}
+
+.btn_mine {
+  border: black, 1px, solid;
+  background-color: rgb(0, 0, 0);
+  color: white;
+  padding: 20px 40px;
+  text-decoration: none;
+  text-align: center;
+}
+.btn_mine:hover {
+  border: black, 1px, solid;
+  color: #000000;
+}
+
+#move_bar, .btn_mine {
+  font-family: "Inter", sans-serif;
+  text-transform: uppercase;
+  font-weight: 400;
+}
+
+.btn_mine:hover {
+  background: rgb(190, 255, 79);
+  background: radial-gradient(circle, rgb(190, 255, 79) 0%, rgb(255, 155, 254) 100%);
+}
+
+.main_nav {
+  align-items: flex-start;
+}
+
+.navbar-toggler-mine {
+  border: 1px solid black;
+  border-radius: 0px;
+  margin: 5%;
+  padding: 20px;
+}
+
+.navbar_mine {
+  border-bottom: 0.5px solid;
+  width: 100%;
+  border-left: 0.5px solid;
+}
+.navbar_mine .nav_item {
+  border: solid 0.5px black;
+  display: flex;
+  width: 100%;
+  justify-content: center;
+  align-items: center;
+}
+.navbar_mine .nav_item .nav_a {
+  font-family: "Inter", sans-serif;
+  font-weight: 400;
+  text-transform: uppercase;
+  font-size: 14px;
+  color: rgb(0, 0, 0);
+}
+
+footer {
+  border-top: 0.5px solid black;
+  margin-bottom: 0;
+  padding: 20px;
+}
+
+.footer_grid {
+  display: grid;
+  grid-template-columns: 3.3fr 2fr 0.5fr;
+  grid-template-rows: 1fr;
+  justify-items: center;
+  align-items: end;
+}
+.footer_grid .footer_display {
+  display: none;
+}
+.footer_grid .footer_display_complete {
+  display: block;
+}
+.footer_grid div .display_socialmedia {
+  display: flex;
+}
+.footer_grid div .display_socialmedia li {
+  display: inline-block;
+  padding: 0 20px;
+}
+.footer_grid div .display_socialmedia li .socialmedia_icons {
+  width: 40px;
+}
+.footer_grid .arrowup {
+  width: 60px;
+  grid-area: arrow;
+}
+
+.main_index {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  border-bottom: 0.5px solid;
+}
+.main_index .carousel_bg {
+  display: none;
+}
+.main_index .carousel_bg .carousel_mine {
+  opacity: 0.7;
+}
+.main_index .img_container {
+  display: flex;
+  flex-direction: row;
+  gap: 50px;
+  margin: 50px 0;
+  align-items: center;
+  justify-content: center;
+}
+.main_index .img_container .img_carrusel {
+  border: 1px solid black;
+}
+
+.grid_a {
+  display: grid;
+  grid-template-columns: 2fr 3fr;
+  grid-template-rows: 100%;
+  border-top: 0.5px solid black;
+}
+.grid_a .text_box_a {
+  margin: 40px 40px 40px 80px;
+}
+.grid_a .text_box_a .subtitle_a {
+  padding: 25px 0;
+}
+.grid_a .container_img {
+  display: flex;
+}
+.grid_a .container_img .img {
+  border-left: 1px solid black;
+  object-fit: cover;
+  display: flex;
 }
 
 /*# sourceMappingURL=style.css.map */
