--- a/scss/base/_base.scss
+++ b/scss/base/_base.scss
@@ -12,7 +12,6 @@ h1{
     font-size: 4.5rem;
     text-align: center;
     padding: 0rem 20rem 0rem 20rem;
-    display: flex;
 }
 h2{
     font-family: 'Inter', sans-serif;
@@ -48,4 +47,51 @@ p{
 
 .hidden{
     display: none;
+}
+
+.show{
+    display: block
+}
+
+#move_bar{
+    @extend %font-caps;
+    font-weight: 1.3rem;
+    border: $half-border;
+    padding: 10px 0 5px 0;
+    
+    marquee ul{
+        display: flex;
+        flex-direction: row;
+        margin: 0%;
+        padding: 0%;
+        width: 100%;
+
+        li {
+            display: inline;
+            padding: 8px;
+        }
+    }
+}
+
+// BOTONES
+
+.button_div{
+    margin-top: 3rem;
+    margin-bottom: 3rem;
+}
+
+.btn_mine{
+    border: $border;
+    background-color: rgb(0, 0, 0);
+    @extend %font-caps;
+    color: white;
+    padding: 20px 40px;
+    text-decoration: none;
+    text-align: center;
+
+    &:hover{
+        border: $border;
+        @extend %gr-c;
+        color: $black;
+    }
 }
