--- a/scss/base/_base.scss
+++ b/scss/base/_base.scss
@@ -81,7 +81,7 @@ p{
 }
 
 .btn_mine{
-    border: $border;
+    border: $complete-border;
     background-color: rgb(0, 0, 0);
     @extend %font-caps;
     color: white;
@@ -90,7 +90,7 @@ p{
     text-align: center;
 
     &:hover{
-        border: $border;
+        border: $complete-border;
         @extend %gr-c;
         color: $black;
     }
