--- a/scss/base/_vars.scss
+++ b/scss/base/_vars.scss
@@ -1,4 +1,4 @@
 $black: #000000;
 
-$half-border: black, 0.5px solid;
-$border: black, 1px, solid;
+$half-border: solid black 0.5px;
+$complete-border: solid black 1px;
