--- a/scss/base/_extend.scss
+++ b/scss/base/_extend.scss
@@ -6,12 +6,12 @@
 
 // Gradientes
 %gr-a{
-    background: rgb(63,94,251);
-    background: linear-gradient(171deg, rgba(63,94,251,1) 0%, rgba(252,70,107,1) 100%);
+    background: rgb(255,250,155);
+    background: radial-gradient(circle, rgba(255,250,155,1) 0%, rgba(79,178,255,1) 100%);
 }
 %gr-b{
-    background: rgb(34,193,195);
-    background: linear-gradient(16deg, rgba(34,193,195,1) 0%, rgba(253,187,45,1) 100%);
+    background: rgb(243,155,255);
+    background: radial-gradient(circle, rgba(243,155,255,1) 0%, rgba(79,255,225,1) 100%);
 }
 %gr-c{
     background:  rgb(190,255,79);
