--- a/scss/componentes/_header.scss
+++ b/scss/componentes/_header.scss
@@ -3,30 +3,36 @@
 }
     
 .navbar-toggler-mine {
-    border: 1px solid black;
+    border: $complete-border;
     border-radius: 0px;
     margin: 5%;
     padding: 20px;
 }
 
 .navbar_mine {
-    border-bottom: 0.5px solid;
+    border-bottom: $half-border;
     width: 100%;
-    border-left: 0.5px solid;
+    border-left: $half-border;
         
     .nav_item {
-        border: solid 0.5px black;
+        border: $half-border;
         display: flex,;
         width: 100%;
         justify-content: center;
         align-items: center;
 
+        &:hover {
+            background-color: black;
+        }
+
         .nav_a{
-            font-family: 'Inter', sans-serif;
-            font-weight: 400;
-            text-transform: uppercase;
+            @extend %font-caps;
             font-size: 14px;
-            color: rgb(0, 0, 0);
+            color: $black;
+
+            &:hover {
+                color: white;
+            }
         }
     }
 }
