--- a/scss/style.scss
+++ b/scss/style.scss
@@ -1,9 +1,14 @@
 @import './base/vars';
-@import './base/base';
 @import './base/maps';
 @import './base/extend';
+@import './base/base';
 
+@import './componentes/mobile';
 @import './componentes/header';
 @import './componentes/footer';
 
-@import './pages/home.scss'
+@import './pages/home.scss';
+@import './pages/ab_me';
+@import './pages/portfolio';
+@import './pages/services';
+@import './pages/contact'
