--- a/css/style.css
+++ b/css/style.css
@@ -181,6 +181,22 @@ p {
   }
 }
 
+@keyframes miAnimacion {
+  0% {
+    height: 500px;
+  }
+  50% {
+    height: 550px;
+  }
+  100% {
+    height: 500px;
+  }
+}
+.animacion:hover {
+  animation: miAnimacion 1s;
+  animation-delay: none;
+}
+
 /*BS TOGGLER*/
 .navbar-toggler-mine {
   border: 1px solid black;
@@ -361,6 +377,7 @@ footer {
   margin: 50px 0;
   align-items: center;
   justify-content: center;
+  border: none;
 }
 @media (max-width: 576px) {
   .main_index .img_container {
