--- a/scss/base/_base.scss
+++ b/scss/base/_base.scss
@@ -168,3 +168,18 @@ p{
         margin: 0;;
     }
 }
+@keyframes miAnimacion {
+    0%{
+        height: 500px;
+    }
+    50%{
+        height: 550px;
+    }
+    100%{
+        height: 500px;
+    }
+}
+.animacion:hover{
+    animation: miAnimacion 1s;
+    animation-delay: none;
+}
