--- a/scss/pages/_home.scss
+++ b/scss/pages/_home.scss
@@ -22,6 +22,7 @@
         margin: 50px 0;
         align-items: center;
         justify-content: center;
+        border: none;
         @media (max-width: 576px){
             display: none;
         }
