--- a/css/style.css
+++ b/css/style.css
@@ -1,7 +1,13 @@
-.navbar_mine .nav_item .nav_a, .button_div_b .button_b, .button_div_c .btn_mine_c, .button_div .btn_mine, #move_bar {
+.navbar_mine .nav_item .nav_a, .button_div_b .button_b, .button_div_c .btn_mine_c, .button_div .btn_mine, #move_bar, h2, h1 {
   font-family: "Inter", sans-serif;
   text-transform: uppercase;
   font-weight: 400;
+}
+
+h3 {
+  font-family: "Inter", sans-serif;
+  text-transform: uppercase;
+  font-weight: 300;
 }
 
 .button_div .btn_mine:hover {
@@ -27,9 +33,6 @@
 }
 
 h1 {
-  font-family: "Inter", sans-serif;
-  font-weight: 400;
-  text-transform: uppercase;
   font-size: 4.5rem;
   text-align: center;
   padding: 0rem 20rem 0rem 20rem;
@@ -44,17 +47,21 @@ h1 {
 }
 
 h2 {
-  font-family: "Inter", sans-serif;
-  font-weight: 300;
-  text-transform: uppercase;
-  font-size: 2.2rem;
+  font-size: 4rem;
+}
+@media (max-width: 576px) {
+  h2 {
+    font-size: 2rem;
+  }
 }
 
 h3 {
-  font-family: "Inter", sans-serif;
-  font-weight: 400;
-  text-transform: uppercase;
-  font-size: 4rem;
+  font-size: 2.2rem;
+}
+@media (max-width: 576px) {
+  h3 {
+    font-size: 1.5rem;
+  }
 }
 
 h4 {
@@ -62,6 +69,11 @@ h4 {
   font-weight: 500;
   text-transform: uppercase;
   font-size: 1.4rem;
+}
+@media (max-width: 576px) {
+  h4 {
+    font-size: 1.2rem;
+  }
 }
 
 h5 {
@@ -72,11 +84,21 @@ h5 {
   letter-spacing: 8px;
   grid-area: phrase;
 }
+@media (max-width: 576px) {
+  h5 {
+    font-size: 0.8rem;
+  }
+}
 
 p {
   font-family: "Inter", sans-serif;
   font-weight: 300;
   font-size: 1.1rem;
+}
+@media (max-width: 576px) {
+  p {
+    font-size: 0.9rem;
+  }
 }
 
 .hidden {
@@ -193,7 +215,7 @@ p {
   }
 }
 .animacion:hover {
-  animation: miAnimacion 1s;
+  animation: miAnimacion 0.8s;
   animation-delay: none;
 }
 
@@ -233,24 +255,6 @@ p {
   padding: 40px;
 }
 
-/* INDEX */
-@media (max-width: 576px) {
-  h2 {
-    font-size: 1.5rem;
-  }
-  h3 {
-    font-size: 2rem;
-  }
-  h4 {
-    font-size: 1.2rem;
-  }
-  p {
-    font-size: 0.9rem;
-  }
-  h5 {
-    font-size: 0.8rem;
-  }
-}
 .main_nav {
   align-items: flex-start;
 }
