--- a/scss/base/_extend.scss
+++ b/scss/base/_extend.scss
@@ -3,6 +3,11 @@
     text-transform: uppercase;
     font-weight: 400;
 }
+%font-caps-b{
+    font-family: 'Inter', sans-serif;
+    text-transform: uppercase;
+    font-weight: 300;
+}
 
 // Gradientes
 %gr-a{
