--- a/scss/base/_extend.scss
+++ b/scss/base/_extend.scss
@@ -9,6 +9,12 @@
     font-weight: 300;
 }
 
+%label{
+    font-family: 'Inter', sans-serif;
+    font-weight: 300;
+    font-size: 1.1rem;
+}
+
 // Gradientes
 %gr-a{
     background: rgb(255,250,155);
