--- a/css/style.css
+++ b/css/style.css
@@ -1,4 +1,4 @@
-.navbar_mine .nav_item .nav_a, .button_div_b .button_b, .button_div_c .btn_mine_c, .button_div .btn_mine, #move_bar, h2, h1 {
+.contact_grid .contact_form fieldset label, .navbar_mine .nav_item .nav_a, .design_services_button, .button_div_b .button_b, .button_div_c .btn_mine_c, .button_div .btn_mine, #move_bar, h2, h1 {
   font-family: "Inter", sans-serif;
   text-transform: uppercase;
   font-weight: 400;
@@ -183,12 +183,9 @@ p {
 }
 
 .design_services_button {
-  border: 1px solid black;
-  background-color: rgb(0, 0, 0);
-  font-family: "Inter", sans-serif;
-  font-weight: 400;
-  text-transform: uppercase;
-  color: white;
+  border: solid black 1px;
+  background-color: #000000;
+  color: #ffffff;
   padding: 20px 40px;
   margin: 40px;
   text-decoration: none;
@@ -1051,7 +1048,7 @@ footer {
 .contact_grid {
   border-bottom: solid black 0.5px;
   display: grid;
-  grid-template-columns: 1fr 1fr;
+  grid-template-columns: 1fr 0.8fr;
   grid-template-rows: 2fr;
   grid-template-areas: "text form" "bgc form";
 }
@@ -1094,8 +1091,20 @@ footer {
   display: flex;
   flex-direction: column;
   align-items: flex-start;
-  justify-content: space-between;
   grid-area: form;
+}
+.contact_grid .contact_form fieldset {
+  display: flex;
+  flex-direction: column;
+  padding: 20px;
+}
+.contact_grid .contact_form fieldset input, .contact_grid .contact_form fieldset textarea {
+  font-family: "Inter", sans-serif;
+  font-weight: 300;
+  border: solid black 1px;
+}
+.contact_grid .contact_form fieldset input:focus, .contact_grid .contact_form fieldset textarea:focus {
+  outline: none;
 }
 
 /*# sourceMappingURL=style.css.map */
