--- a/scss/base/_base.scss
+++ b/scss/base/_base.scss
@@ -159,12 +159,10 @@ p{
 }
 
 .design_services_button{
-    border: 1px solid black;
-    background-color: rgb(0, 0, 0);
-    font-family: 'Inter', sans-serif;
-    font-weight: 400;
-    text-transform: uppercase;
-    color: white;
+    border: $complete-border;
+    background-color: $black;
+    @extend %font-caps;
+    color: $white;
     padding: 20px 40px;
     margin: 40px;
     text-decoration: none;
