--- a/scss/pages/_contact.scss
+++ b/scss/pages/_contact.scss
@@ -1,7 +1,7 @@
 .contact_grid{
     border-bottom: $half-border;
     display: grid;
-    grid-template-columns: 1fr 1fr;
+    grid-template-columns: 1fr 0.8fr;
     grid-template-rows: 2fr;
     grid-template-areas:
     "text form"
@@ -44,7 +44,25 @@
         display: flex;
         flex-direction: column;
         align-items: flex-start;
-        justify-content: space-between;
         grid-area: form;
+
+        fieldset{
+            display: flex;
+            flex-direction: column;
+            padding: 20px;
+
+            label{
+                @extend %font-caps
+            }
+            input, textarea{
+                font-family: 'Inter', sans-serif;
+                font-weight: 300;
+                border: $complete-border;
+
+                &:focus{
+                    outline: none;
+                }
+            }
+        }
     }
 }
